--- a/src/style.css
+++ b/src/style.css
@@ -289,7 +289,7 @@ html, body {
   border-radius: 0.5rem;
   border: none;
   cursor: pointer;
-  background: #0085b3;
+  background: #00a8e1;
   color: white;
   text-align: center;
   transition: background 0.3s ease;
