--- a/src/style.css
+++ b/src/style.css
@@ -194,6 +194,7 @@ html, body {
   text-align: left;
   font-family: 'EmberCondensed', sans-serif;
   font-size: 1.6rem;
+  margin-bottom: 1rem;
   /*text-shadow: 1px 2px 6px rgba(0,0,0,0.7);*/
 }
 
