--- a/src/style.css
+++ b/src/style.css
@@ -312,3 +312,19 @@ html, body {
   margin-bottom: 2rem;
   display: block;
 }
+
+.spinner-dot {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 0.5rem;            /* Ridotto */
+  transform: translateY(-2rem);  /* Più in alto */
+}
+
+.spinner-dot-item {
+  width: 1.2rem;
+  height: 1.2rem;
+  background-color: #146eb4; /* Blu Amazon */
+  border-radius: 50%;
+}
