--- a/src/style.css
+++ b/src/style.css
@@ -328,3 +328,47 @@ html, body {
   background-color: #146eb4; /* Blu Amazon */
   border-radius: 50%;
 }
+
+.vehicle-loading-ui {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  z-index: 1000;
+  pointer-events: auto;
+  width: 24.5rem;
+  text-transform: uppercase;
+}
+
+.vehicle-loading-btn.primary {
+  width: 100%;
+  padding: 2rem 0;
+  font-size: 1.6rem;
+  font-family: 'EmberCondensedBold', sans-serif;
+  background-color: #004f6c;
+  color: white;
+  border: none;
+  border-radius: 0.5rem;
+  text-align: center;
+  cursor: pointer;
+  text-transform: inherit
+}
+
+.vehicle-loading-btn.secondary {
+  width: 100%;
+  padding: 2rem 0;
+  font-size: 1.6rem;
+  font-family: 'EmberCondensedBold', sans-serif;
+  background-color: white;
+  color: #004f6c;
+  border: 0.2rem solid #004f6c;
+  border-radius: 0.5rem;
+  text-align: center;
+  cursor: pointer;
+  text-transform: inherit
+}
+
