--- a/src/react/SlotOverlay.css
+++ b/src/react/SlotOverlay.css
@@ -18,8 +18,8 @@
   padding: 0;
   box-sizing: border-box;
   background-color: rgba(0, 127, 255, 0.15);
-  /*border: 2px solid white;*/
-  border: none;
+  border: 2px solid white;
+  border: 2px solid white;
   border-radius: 0.5rem;
   color: white;
   font-family: 'EmberCondensedBold', sans-serif;
