--- a/src/style.css
+++ b/src/style.css
@@ -331,7 +331,7 @@ html, body {
 
 .vehicle-loading-ui {
   position: absolute;
-  top: 40%;
+  top: 55;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
