--- a/src/react/SlotOverlay.css
+++ b/src/react/SlotOverlay.css
@@ -17,8 +17,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: rgba(0, 128, 255, 0.2);
-  border: 2px solid rgb(255, 255, 255);
+  background-color: rgba(5, 166, 224, 0.2);
+  border: 2px solid #05A6E0FF;
   border-radius: 0.5rem;
   color: white;
   font-family: 'EmberCondensedBold', sans-serif;
@@ -30,6 +30,30 @@
 }
 
 .slot-button:hover {
-  background-color: rgba(0, 127, 255, 0.8);
-  transform: scale(1.05);
+  background-color: rgba(5, 166, 224, 0.6);
+  transform: scale(1);
+}
+
+.slot-dot {
+  display: inline-block;
+  position: relative;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background: #05A6E0FF;
+  margin: auto;
+  vertical-align: middle;
+}
+
+.slot-dot-ring {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  background: transparent;
+  box-sizing: border-box;
+  transform: translate(-50%, -50%);
 }
