--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'EmberCondensedBold';
-  src: url('/assets/fonts/ember/EmberCdRC_Bd.ttf') format('truetype');
+  src: url('/assets/fonts/ember/AmazonEmberCdRC-Bold.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'EmberCondensed';
-  src: url('/assets/fonts/ember/EmberCdRC_Rg.ttf') format('truetype');
+  src: url('/assets/fonts/ember/AmazonEmberCdRC-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
@@ -101,7 +101,7 @@ html, body {
 
 
 .menu-btn {
-  padding: 1rem 1.5rem;
+  padding: 0.5rem 1.5rem;
   background: transparent;
   color: #daf0ff;
   border: none;
@@ -112,13 +112,6 @@ html, body {
   /*text-shadow: 1px 2px 6px rgba(0,0,0,1);*/
   transition: font-size 0.8s ease, color 0.8s ease;
 }
-
-/*.menu-btn::before {
-  content: "•";
-  display: inline-block;
-  margin-right: 0.8rem;
-  font-size: 1.5rem;
-}*/
 
 .menu-btn.active {
   color: #daf0ff;
@@ -137,7 +130,7 @@ html, body {
   font-weight: bold;
   border: none;
   cursor: pointer;
-  margin-top: 2rem;
+  margin-top: 0.5rem;
   font-size: 1.7rem;
   text-align: center;
   overflow: hidden;
@@ -187,7 +180,7 @@ html, body {
 
 .submenu-btn {
   all: unset;
-  padding: 1.2rem 2rem;
+  padding: 0.5rem 2rem;
   color: #02080e ;
   border-radius: 1rem;
   cursor: pointer;
@@ -271,8 +264,8 @@ html, body {
 
 .experience-selection {
   position: absolute;
-  top: 60%;
-  right: 5rem;
+  top: 50%;
+  right: 9rem;
   z-index: 900;
   display: flex;
   flex-direction: column;
